@@ -1,3 +1,9 @@
+Description: Remove prompts in Makefile
+Author: Damyan Ivanov <dmn@debian.org>
+Forwarded: no
+Reviewed-By: Xavier Guimard <x.guimard@free.fr>
+Last-update: 2012-12-07
+
 --- a/Makefile.PL
 +++ b/Makefile.PL
 @@ -6,20 +6,24 @@ my ($define, $ccfl);
